# vitals_visualiser

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  README.md  app.py  mock_ws_server.py  pyproject.toml  requirements.txt
export_data/: Readme.txt  anonymous_7000_ppg_20260214-173257.xlsx
utils/: loader.py  plotting.py  spo2.py  streaming.py
